--- a/ToDoList/ToDoList.csproj
+++ b/ToDoList/ToDoList.csproj
@@ -8,7 +8,9 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.4" />
+      <PackageReference Include="GraphiQL" Version="2.0.0" />
+      <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="7.7.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.6" />
       <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     </ItemGroup>
